--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -216,6 +216,14 @@
     "errors": {
       "loadModels": "Не удалось загрузить доступные модели.",
       "downloadModel": "Не удалось загрузить модель: {{error}}."
+    },
+    "welcome": {
+      "title": "Всё готово!",
+      "modelDownloading": "Модель загружается. Прогресс будет виден в нижней панели.",
+      "providerReady": "Провайдер настроен и готов к использованию.",
+      "shortcutDescription": "Удерживайте для записи, отпустите для транскрипции. Текст скопируется в буфер обмена.",
+      "settingsNote": "Приложение работает сразу. Множество настроек можно изучить в удобном темпе — профили, языки, горячие клавиши и многое другое.",
+      "getStarted": "Начать"
     }
   },
   "modelSelector": {
